--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -124,8 +124,4 @@
   .task-container {
     flex-direction: column;
   }
-
-  .line-style {
-    margin-left: -100px;
-  }
 }
